# Denaro

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Denaro.doap  Denaro.sln  NickvisionMoney.doap  NickvisionMoney.sln  README.md  UpdateConfig.json  build.cake  main.cpp  meson.build  org.nickvision.money.desktop  org.nickvision.money.extension.xml  org.nickvision.money.json  org.nickvision.money.metainfo.xml
.config/: dotnet-tools.json
Dev_script/: pdf_gen.c
NickvisionMoney.GNOME/: NickvisionMoney.GNOME.csproj  Program.cs  install.sh  install_extras.sh  justfile  nuget-sources.json  org.nickvision.money-gnomebuilder.json  org.nickvision.money.desktop  org.nickvision.money.json  org.nickvision.money.metainfo.xml  org.nickvision.money.service.in  sources.json  translate_meta.py
NickvisionMoney.Shared/: NickvisionMoney.Shared.csproj  org.nickvision.money.desktop.in  org.nickvision.money.extension.xml  org.nickvision.money.in  org.nickvision.money.metainfo.xml.in
NickvisionMoney.Shared.Tests/: CurrencyHelperTests.cs  NickvisionMoney.Shared.Tests.csproj
NickvisionMoney.WinUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NickvisionMoney.WinUI.csproj  Package.appxmanifest  WindowsSystemDispatcherQueueHelper.cs  app.manifest
controls/: headerbar.cpp  headerbar.h  infobar.cpp  infobar.h  progressdialog.cpp  progressdialog.h
docs/po/: LINGUAS  (+28 more)
flatpak/: org.nickvision.money.json
inno/: setup.iss
libdenaro/: CMakeLists.txt
libdenaro/include/controllers/: accountsettingsdialogcontroller.h  accountviewcontroller.h  dashboardviewcontroller.h  mainwindowcontroller.h  newaccountdialogcontroller.h  preferencesviewcontroller.h
libdenaro/include/helpers/: currencyhelpers.h  datehelpers.h
libdenaro/include/models/: account.h  accountmetadata.h  accountrepository.h  accounttype.h  amountstyle.h  color.h  configuration.h  currency.h  currencycheckstatus.h  currencyconversion.h  currencyconversionservice.h  customcurrency.h  dashboardgroup.h  exportmode.h  graphtype.h  group.h  importresult.h  insertseparator.h  insertseparatortrigger.h  receipt.h  receipttype.h  recentaccount.h  remindersthreshold.h  sortby.h  theme.h  transaction.h  transactionreminder.h  transactionrepeatinterval.h  transactiontype.h  transfer.h
libdenaro/src/controllers/: accountsettingsdialogcontroller.cpp  accountviewcontroller.cpp  dashboardviewcontroller.cpp  mainwindowcontroller.cpp  newaccountdialogcontroller.cpp  preferencesviewcontroller.cpp
libdenaro/src/helpers/: currencyhelpers.cpp  datehelpers.cpp
libdenaro/src/models/: account.cpp  accountmetadata.cpp  accountrepository.cpp  color.cpp  configuration.cpp  currency.cpp  currencyconversion.cpp  currencyconversionservice.cpp  customcurrency.cpp  dashboardgroup.cpp  group.cpp  importresult.cpp  receipt.cpp  recentaccount.cpp  transaction.cpp  transactionreminder.cpp  transfer.cpp
libdenaro/tests/: DenaroTestAccount1.csv  DenaroTestAccount2.ofx  DenaroTestAccount3.qif  accounttests.cpp  colortests.cpp  currencyconversiontests.cpp  currencytests.cpp  datetests.cpp  receipttests.cpp
models/: account.cpp  account.h  configuration.cpp  configuration.h  datatransactionscolumns.cpp  datatransactionscolumns.h  transaction.cpp  transaction.h
org.nickvision.money.gnome/: CMakeLists.txt
org.nickvision.money.winui/: AccountPage.idl  AccountPage.xaml  AccountPage.xaml.cpp  AccountPage.xaml.h  App.idl  App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  NewAccountDialog.idl  NewAccountDialog.xaml  NewAccountDialog.xaml.cpp  NewAccountDialog.xaml.h  SettingsPage.idl  SettingsPage.xaml  SettingsPage.xaml.cpp  SettingsPage.xaml.h  includes.h  org.nickvision.money.winui.manifest  org.nickvision.money.winui.rc
org.nickvision.money.winui/Controls/: ClickableSettingsRow.idl  ClickableSettingsRow.xaml  ClickableSettingsRow.xaml.cpp  ClickableSettingsRow.xaml.h  CurrencyConverterDialog.idl  CurrencyConverterDialog.xaml  CurrencyConverterDialog.xaml.cpp  CurrencyConverterDialog.xaml.h  SettingsRow.idl  SettingsRow.xaml  SettingsRow.xaml.cpp  SettingsRow.xaml.h  StatusPage.idl  StatusPage.xaml  StatusPage.xaml.cpp  StatusPage.xaml.h  ViewStack.idl  ViewStack.xaml  ViewStack.xaml.cpp  ViewStack.xaml.h  ViewStackPage.idl  ViewStackPage.xaml  ViewStackPage.xaml.cpp  ViewStackPage.xaml.h
org.nickvision.money.winui/Helpers/: WinUI.cpp  WinUI.h
po/: CREDITS.json  LINGUAS  POTFILES  de.po  es.po  fr.po  hi.po  hr.po  it.po  nl.po  oc.po  pl.po  ru.po  sv.po
snap/: denaro-snap.patch  denaro.patch  snapcraft.yaml
src/: main.cpp  meson.build
src/controllers/: accountviewcontroller.cpp  accountviewcontroller.hpp  groupdialogcontroller.cpp  groupdialogcontroller.hpp  mainwindowcontroller.cpp  mainwindowcontroller.hpp  preferencesdialogcontroller.cpp  preferencesdialogcontroller.hpp  transactiondialogcontroller.cpp  transactiondialogcontroller.hpp  transferdialogcontroller.cpp  transferdialogcontroller.hpp
src/helpers/: contextualtranslation.hpp  moneyhelpers.cpp  moneyhelpers.hpp  stringhelpers.cpp  stringhelpers.hpp  translation.cpp  translation.hpp
src/models/: account.cpp  account.hpp  appinfo.cpp  appinfo.hpp  configuration.cpp  configuration.hpp  group.cpp  group.hpp  transaction.cpp  transaction.hpp  transfer.cpp  transfer.hpp
src/resources/: org.nickvision.money.css  org.nickvision.money.gresource.xml
src/ui/: application.cpp  application.hpp
src/ui/controls/: comboboxdialog.cpp  comboboxdialog.hpp  entrydialog.cpp  entrydialog.hpp  grouprow.cpp  grouprow.hpp  messagedialog.cpp  messagedialog.hpp  progressdialog.cpp  progressdialog.hpp  transactionrow.cpp  transactionrow.hpp
src/ui/views/: accountview.cpp  accountview.hpp  groupdialog.cpp  groupdialog.hpp  mainwindow.cpp  mainwindow.hpp  preferencesdialog.cpp  preferencesdialog.hpp  shortcutsdialog.cpp  shortcutsdialog.hpp  transactiondialog.cpp  transactiondialog.hpp  transferdialog.cpp  transferdialog.hpp
src/utilities/: string_format.hpp  translation.hpp
(+972 files in other folders)
