sources = files('main.cpp',
		'models/appinfo.hpp',
		'models/appinfo.cpp',
		'models/configuration.hpp',
		'models/configuration.cpp',
		'models/transaction.hpp',
		'models/transaction.cpp',
		'models/account.hpp',
		'models/account.cpp',
		'controllers/mainwindowcontroller.hpp',
		'controllers/mainwindowcontroller.cpp',
		'controllers/accountviewcontroller.hpp',
		'controllers/accountviewcontroller.cpp',
		'controllers/transactiondialogcontroller.hpp',
		'controllers/transactiondialogcontroller.cpp',
		'controllers/preferencesdialogcontroller.hpp',
		'controllers/preferencesdialogcontroller.cpp',
		'ui/application.hpp',
		'ui/application.cpp',
		'ui/controls/comboboxdialog.hpp',
		'ui/controls/comboboxdialog.cpp',
		'ui/controls/entrydialog.hpp',
		'ui/controls/entrydialog.cpp',
		'ui/controls/messagedialog.hpp',
		'ui/controls/messagedialog.cpp',
		'ui/controls/progressdialog.hpp',
		'ui/controls/progressdialog.cpp',
		'ui/views/mainwindow.hpp',
		'ui/views/mainwindow.cpp',
		'ui/views/accountview.hpp',
		'ui/views/accountview.cpp',
		'ui/views/transactiondialog.hpp',
		'ui/views/transactiondialog.cpp',
		'ui/views/preferencesdialog.hpp',
		'ui/views/preferencesdialog.cpp',
		'ui/views/shortcutsdialog.hpp',
		'ui/views/shortcutsdialog.cpp')

resources = files('resources/org.nickvision.money.svg', 'resources/org.nickvision.money-devel.svg')
resources_symbolic = files('resources/org.nickvision.money-symbolic.svg')
resources_actions = files('resources/bank-symbolic.svg')