sources = files('main.cpp',
		'helpers/translation.hpp',
		'helpers/translation.cpp',
		'helpers/stringhelpers.hpp',
		'helpers/stringhelpers.cpp',
		'helpers/moneyhelpers.hpp',
		'helpers/moneyhelpers.cpp',
		'models/appinfo.hpp',
		'models/appinfo.cpp',
		'models/configuration.hpp',
		'models/configuration.cpp',
		'models/group.hpp',
		'models/group.cpp',
		'models/transaction.hpp',
		'models/transaction.cpp',
		'models/account.hpp',
		'models/account.cpp',
		'controllers/mainwindowcontroller.hpp',
		'controllers/mainwindowcontroller.cpp',
		'controllers/accountviewcontroller.hpp',
		'controllers/accountviewcontroller.cpp',
		'controllers/groupdialogcontroller.hpp',
		'controllers/groupdialogcontroller.cpp',
		'controllers/transactiondialogcontroller.hpp',
		'controllers/transactiondialogcontroller.cpp',
		'controllers/preferencesdialogcontroller.hpp',
		'controllers/preferencesdialogcontroller.cpp',
		'ui/application.hpp',
		'ui/application.cpp',
		'ui/controls/comboboxdialog.hpp',
		'ui/controls/comboboxdialog.cpp',
		'ui/controls/entrydialog.hpp',
		'ui/controls/entrydialog.cpp',
		'ui/controls/messagedialog.hpp',
		'ui/controls/messagedialog.cpp',
		'ui/controls/progressdialog.hpp',
		'ui/controls/progressdialog.cpp',
		'ui/controls/grouprow.hpp',
		'ui/controls/grouprow.cpp',
		'ui/controls/transactionrow.hpp',
		'ui/controls/transactionrow.cpp',
		'ui/views/mainwindow.hpp',
		'ui/views/mainwindow.cpp',
		'ui/views/accountview.hpp',
		'ui/views/accountview.cpp',
		'ui/views/groupdialog.hpp',
		'ui/views/groupdialog.cpp',
		'ui/views/transactiondialog.hpp',
		'ui/views/transactiondialog.cpp',
		'ui/views/preferencesdialog.hpp',
		'ui/views/preferencesdialog.cpp',
		'ui/views/shortcutsdialog.hpp',
		'ui/views/shortcutsdialog.cpp')

resources = files('resources/org.nickvision.money.svg', 'resources/org.nickvision.money-devel.svg')
resources_symbolic = files('resources/org.nickvision.money-symbolic.svg')
resources_actions = files('resources/bank-symbolic.svg', 'resources/larger-brush-symbolic.svg', 'resources/money-none-symbolic.svg', 'resources/wallet2-symbolic.svg')
gresource = files('resources/org.nickvision.money.gresource.xml')